--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Avi Apps - Pay Less Get More</title>
   </head>
-  <body>
-    <button class="btn btn--secondary">Try for free</button>
-  </body>
+  <body></body>
 </html>
