Adding card component

--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Avi Apps - Pay Less Get More</title>
   </head>
-  <body></body>
+  <body style="padding: 50px"></body>
 </html>
