Adding and arrow icon style to icon component

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Avi Apps - Pay Less Get More</title>
   </head>
-  <body style="padding: 50px"></body>
+  <body>
+    
+  </body>
 </html>
