Adding collapsible compenent

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <title>Avi Apps - Pay Less Get More</title>
   </head>
   <body>
-    
+
+
+    <script src="js/main.js"></script>
   </body>
 </html>
