Adding media component

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <title>Avi Apps - Pay Less Get More</title>
   </head>
   <body>
+    <!-- <article class="container grid grid--1x2">
+      <div class="features-left">
+        <img src="images/features-img.png" alt="phone that presents features" />
+      </div>
+      <div class="features-right">
+        <h2>Awesome apps features</h2>
+        <p>
+          Increase productivity with a simple to-do app. app for managing your
+          personal budgets.
+        </p>
+      </div>
+    </article> -->
+
     <script src="js/main.js"></script>
   </body>
 </html>
